testdata/golden/sema/invalid/ret_outside_block.sg
fn main() -> nothing {
    ret;
    return nothing;
}
